--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "google-translate-api": "^2.3.0",
     "multer": "^1.3.0"
   }
 }
